Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -276,7 +276,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append(\"Malta\")"
+    "countries.append(\"Thailand\")"
    ]
   },
   {
