--- a/index.ipynb
+++ b/index.ipynb
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
     " 'Mexico',\n",
     " 'USA',\n",
     " 'Morocco',\n",
-    " 'New Mexico',\n",
+    "\n",
     " 'Finland',\n",
     " 'Argentina',\n",
     " 'Italy',\n",
@@ -353,9 +353,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Croatia',\n",
+       " 'USA',\n",
+       " 'Argentina',\n",
+       " 'Mexico',\n",
+       " 'USA',\n",
+       " 'Morocco',\n",
+       " 'Finland',\n",
+       " 'Argentina',\n",
+       " 'Italy',\n",
+       " 'Canada',\n",
+       " 'South Korea',\n",
+       " 'Malta',\n",
+       " 'Thailand']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "countries \n",
     "# ['Croatia', 'USA', 'Argentina', 'Mexico', 'USA', 'Morocco', 'USA', 'Finland', \n",
