--- a/index.ipynb
+++ b/index.ipynb
@@ -467,12 +467,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = list(countries)"
+    "unique_countries = set(countries)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
