--- a/index.ipynb
+++ b/index.ipynb
@@ -515,7 +515,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_of_repeats = l\n",
+    "num_of_repeats = len(count)\n",
     "num_of_repeats # 3"
    ]
   },
